# dd-evals

./: .gitignore  README.md  conftest.py  dashboard.html  make_report_plots.py  pyproject.toml  requirements.txt  results.html  run_eval.py
.github/workflows/: ci.yml
corpus/: MANIFEST.yaml
corpus/atlas_offset_holdings/: adverse_media.md  press_release.md  registry_extract.md  sanctions_check.md
corpus/meridian_carbon_partners/: adverse_media.md  press_release.md  registry_extract.md  sanctions_check.md
corpus/northwind_restoration/: adverse_media.md  press_release.md  registry_extract.md  sanctions_check.md
corpus/verdant_capital_ltd/: adverse_media.md  press_release.md  registry_extract.md  sanctions_check.md
eval_set/: field_keys.yaml  questions.yaml
judge/: CALIBRATION_GUIDE.md  calibration_result.json  calibration_set.csv  calibration_set.jsonl  judge_prompt.md  rubrics.md
results/: RUN_PROVENANCE.md  eval_report.json  eval_report.md  mutation_check.json
results/raw/: answers.json  ground_truth.json  judge_verdicts.json
scripts/: no-em-dash.sh
src/: answer.py  calibration_csv_to_jsonl.py  judge_calibration.py  judge_runner.py  metric_record.py  metrics.py  mutation_check.py  retrieve.py  score_run.py
tests/: test_answer.py  test_corpus.py  test_eval_set.py  test_judge_calibration.py  test_judge_runner.py  test_metric_record.py  test_metrics.py  test_mutation_check.py  test_retrieve.py  test_run_eval.py  test_score_run.py
